tests/negative/neg_pr113_float_discriminant.safe
package neg_pr113_float_discriminant
   type packet (weight : float = 1.0) is
      record
         value : integer;

